Closed
Bug 1463230
Opened 7 years ago
Closed 7 years ago
gfxMacFont.cpp error: using integer absolute value function 'abs' when argument is of floating point type
Categories
(Core :: Layout: Text and Fonts, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla62
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox60 | --- | unaffected |
| firefox61 | --- | unaffected |
| firefox62 | --- | fixed |
People
(Reporter: jib, Assigned: jib)
References
Details
(Keywords: regression)
Attachments
(1 file)
+++ This bug was initially created as a clone of Bug #1457417 +++
Nightly no longer compiles for me on OSX 10.12.6 (16G29)
0:08.52 /Users/Jan/moz/mozilla-central/gfx/thebes/gfxMacFont.cpp:100:21: error: using integer absolute value function 'abs' when argument is of floating point type [-Werror,-Wabsolute-value]
0:08.52 if (abs(value - axis.mDefaultValue) < 0.001f) {
0:08.52 ^
0:08.52 /Users/Jan/moz/mozilla-central/gfx/thebes/gfxMacFont.cpp:100:21: note: use function 'std::abs' instead
0:08.52 if (abs(value - axis.mDefaultValue) < 0.001f) {
0:08.52 ^~~
0:08.52 std::abs
0:08.52 1 error generated.
0:08.52 make[4]: *** [gfxMacFont.o] Error 1
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → jib
| Comment hidden (mozreview-request) |
Comment 2•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8979359 [details]
Bug 1463230 - Fix compile error on abs(float). Use std::abs() instead.
https://reviewboard.mozilla.org/r/245514/#review251542
Stealing review from jwatt - this looks fine, thanks.
Attachment #8979359 -
Flags: review+
Comment 3•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8979359 [details]
Bug 1463230 - Fix compile error on abs(float). Use std::abs() instead.
https://reviewboard.mozilla.org/r/245514/#review251544
Updated•7 years ago
|
status-firefox60:
--- → unaffected
status-firefox61:
--- → unaffected
| Assignee | ||
Updated•7 years ago
|
Attachment #8979359 -
Flags: review?(jwatt)
Pushed by jbruaroey@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b9afdceeddbf
Fix compile error on abs(float). Use std::abs() instead. r=jfkthame
Comment 5•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
Updated•7 years ago
|
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•