Bug 1463230 - Fix compile error on abs(float). Use std::abs() instead. r=jfkthame

MozReview-Commit-ID: 16wgbMcFjeT